<resources>
    <string name="app_name">GPA</string>

    <string name="title">Arsenal Information</string>

    <!-- Nav Bar -->
    <string name="home_nav">Home</string>
    <string name="next_nav">Future</string>
    <string name="next_race_nav">Race</string>
    <string name="epic_nav">Free Game</string>

    <!-- Home Screen -->
    <string name="logo_desc">Logo Image</string>
    <string name="countdown_finished">Game Started!</string>

    <!-- Next Race Screen -->
    <string name="race_countdown_finished">Race Started!</string>
    <string name="race_countdown_season_finished">Season Finished!</string>
    <string name="race_blank"> </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="team_header">Team Selector</string>
    <string name="team_title">Default Team</string>
    <string name="default_team">Arsenal</string>

    <!-- Future Games Screen -->


</resources>